@@ -286,6 +286,18 @@ AC_TRY_COMPILE([#include <iterator>],
       	 it='no'])
 AC_MSG_RESULT($it)
 
+AC_MSG_CHECKING([for reverse_iterator template])
+AC_TRY_COMPILE([#include <iterator> 
+	using namespace PGSTD;struct I:iterator<random_access_iterator_tag,int>{};],
+	[reverse_iterator<I> rit],
+	[reverseit='yes'],
+	[AC_DEFINE(PQXX_HAVE_REVERSE_ITERATOR,
+		1,
+		[Define if reverse_iterator template works as expected])
+	reverseit='no'])
+AC_MSG_RESULT($reverseit)
+
+
 AC_MSG_CHECKING([whether overloaded using-declarations work])
 AC_TRY_COMPILE([struct A{foo(int){}};struct B{using A::foo;foo(int,bool){}};],
 	[B b;b.foo(1,true);],
